<?xml version="1.0"?>
<package format="2">
  <name>hongfu_bms_msg</name>
  <version>1.0.0</version>
  <description>The hongfu_bms_msg package</description>

  <maintainer email="hangliu@iquotient-robotics.com">liu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msg</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msg</exec_depend>

  <export>

  </export>
</package>
